--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Elastic Beanstalk</title>
+    <title>KaviPreetha AWS</title>
     <style>
       body {
         color: #ffffff;
@@ -74,19 +74,17 @@
   </head>
   <body>
     <div class="textColumn">
-      <h1>Congratulations</h1>
-      <p>Your first AWS Elastic Beanstalk Node.js application is now running on your own dedicated environment in the AWS Cloud</p>
+      <h1>KaviPreetha</h1>
+      <p>My First AWS Elastic Beanstalk Node.js application is running in the AWS Cloud</p>
     </div>
     <div class="linksColumn">
       <h2>What's Next?</h2>
       <ul>
-        <li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/Welcome.html">AWS Elastic Beanstalk overview</a></li>
-        <li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/concepts.html">AWS Elastic Beanstalk concepts</a></li>
-        <li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/create_deploy_nodejs_express.html">Deploy an Express Application to AWS Elastic Beanstalk</a></li>
-        <li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/create_deploy_nodejs_express_elasticache.html">Deploy an Express Application with Amazon ElastiCache to AWS Elastic Beanstalk</a></li>
-        <li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/create_deploy_nodejs_geddy_elasticache.html">Deploy a Geddy Application with Amazon ElastiCache to AWS Elastic Beanstalk </a></li>
-        <li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/create_deploy_nodejs_custom_container.html">Customizing and Configuring a Node.js Container </a></li>
-        <li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/using-features.loggingS3.title.html">Working with Logs</a></li>
+        <li><a href="https://aws.amazon.com/devops/what-is-devops/">Devops</a></li>
+        <li><a href="https://www.jenkins.io/">Jenkins</a></li>
+        <li><a href="https://www.terraform.io/intro">Terraform</a></li>
+        <li><a href="https://aws.amazon.com/what-is-aws/">AWS</a></li>
+        <li><a href="https://aws.amazon.com/free/?all-free-tier.sort-by=item.additionalFields.SortRank&all-free-tier.sort-order=asc&awsf.Free%20Tier%20Categories=categories%23compute&trk=32f4fbd0-ffda-4695-a60c-8857fab7d0dd&sc_channel=ps&sc_campaign=acquisition&sc_medium=ACQ-P|PS-GO|Brand|Desktop|SU|Compute|EC2|IN|EN|Text&s_kwcid=AL!4422!3!536455214108!e!!g!!aws%20ec2%20server&ef_id=Cj0KCQjwzqSWBhDPARIsAK38LY_otti4V3RmffxcwJAkhApJiFWWUXNeyJoAY20dDNHEmA5Y_-gyD6UaAmKZEALw_wcB:G:s&s_kwcid=AL!4422!3!536455214108!e!!g!!aws%20ec2%20server&awsf.Free%20Tier%20Types=*all">EC2</a></li>
       </ul>
     </div>
   </body>
