bg image and text color

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>KaviPreetha AWS</title>
     <style>
       body {
-        color: #ffffff;
+        color: #a6769a;
         font-family: Arial, sans-serif;
         font-size:14px;
         -moz-transition-property: text-shadow;
@@ -37,6 +37,8 @@
         padding-top: 11em;
         background-color: pink;
 
+  background-image: url('bgimg.jpg');
+
       }
       .textColumn p {
         width: 75%;
@@ -53,7 +55,7 @@
       }
 
       h1 {
-        color: #33342D;
+        color: #edf2d0;
         font-size: 500%;
         font-weight: normal;
         margin-bottom: 0em;
@@ -74,7 +76,7 @@
   </head>
   <body>
     <div class="textColumn">
-      <h1>KaviPreetha</h1>
+      <h1>KaviPreetha 👩</h1>
       <p>My First AWS Elastic Beanstalk Node.js application is running in the AWS Cloud</p>
     </div>
     <div class="linksColumn">
